--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-frontend_service/
-    .env
-recipe_service/
-    .env
-user_service/
-    .env
-search_service/
-    .env
+frontend_service/.env
+
+recipe_service/.env
+
+user_service/.env
+
 __pycache__/
     *.pyc
